Fixed selectbox alignment in character summery

--- a/less/actors.less
+++ b/less/actors.less
@@ -54,10 +54,10 @@
       height: 30px;
       border-bottom: @borderGroove;
       font-size: 18px;
-      input, span {
+      input, span, select {
         display: block;
-        height: 24px;
-        line-height: 24px;
+        height: 20px;
+        line-height: 20px;
       }
       span {
         margin-inline-start: 4px;
